hphp/test/slow/enum-invalid-base/resource.php.expectf
Fatal error: Invalid base type for enum MyEnum in %s/slow/enum-invalid-base/resource.php on line 3
